--- a/src/ui/html/event_details.html
+++ b/src/ui/html/event_details.html
@@ -34,6 +34,10 @@
           </div>
           <div class="event_aside">
             <p>
+              <label>Организатор:</label>
+              <span id="event-organizer">Loading...</span>
+            </p>
+            <p>
               <label for="event-date">Date</label>
               <span id="event-date">01/01/2025</span>
             </p>
