Event detailes changes

--- a/src/ui/html/event_details.html
+++ b/src/ui/html/event_details.html
@@ -34,7 +34,7 @@
           </div>
           <div class="event_aside">
             <p>
-              <label>Организатор:</label>
+              <label>Organizer:</label>
               <span id="event-organizer">Loading...</span>
             </p>
             <p>
