--- a/src/ui/html/event_details.html
+++ b/src/ui/html/event_details.html
@@ -91,6 +91,18 @@
             />
           </div>
           <img id="qr-code" src="qr-code-placeholder.png" alt="QR Code" />
+          <!-- Форма для отправки приглашения -->
+          <div class="invite-form">
+            <label for="invite-emails"
+              >Enter email addresses (comma-separated):</label
+            >
+            <input
+              type="text"
+              id="invite-emails"
+              placeholder="user1@example.com, user2@example.com"
+            />
+            <button id="send-invite-btn">Send Invitation</button>
+          </div>
         </div>
       </div>
     </main>
