new event templates for prem

--- a/src/ui/html/create_event.html
+++ b/src/ui/html/create_event.html
@@ -56,6 +56,17 @@
               id="eLocation"
             />
           </div>
+
+            <!-- Для премиум пользователей: выбор шаблона -->
+            <div class="input_group premium-only">
+              <label for="template-select">Select Event Template</label>
+              <select id="template-select" name="template">
+                <option value="default">Default</option>
+                <option value="template1">Template 1</option>
+                <option value="template2">Template 2</option>
+              </select>
+            </div>
+            
           <!-- Поле для загрузки изображения -->
           <div class="input_group">
             <!-- Кастомная кнопка -->
